[package]
name = "exp-async-rust-wasmtime"
version = "0.1.0"
authors = ["Philipp Muens <raute1337@gmx.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.13"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "7795a230f20c2e8bd455d33bbe02d8c00aaf3893" }

[[bin]]
name = "bin"
path = "src/bin.rs"
